# ampersend-examples

./: .env.example  CLAUDE.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: python-ci.yml  typescript-ci.yml
python/examples/: README.md  pyproject.toml
python/examples/docs/: environment-variables.md  running-mcp-proxy.md
python/examples/src/examples/a2a/buyer/adk/: agent.py
python/examples/src/examples/a2a/buyer/langchain/: README.md  agent.py
python/examples/src/examples/a2a/buyer/local_agent/: agent.py
typescript/examples/fastmcp-x402-server/: README.md  package.json
typescript/examples/fastmcp-x402-server/src/: server.ts
typescript/examples/langchain-mcp/: README.md  package.json
typescript/examples/langchain-mcp/src/: index.ts
typescript/examples/x402-http-client/: README.md  eslint.config.mjs  package.json
typescript/examples/x402-http-client/src/: index.ts
